--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -213,10 +213,9 @@ figure.effect-sarah:hover a::after
   display: block
   top: 0
   left: 0
-  padding: 10px 0 10px
+  padding: 40px 0 60px
   text-align: center
   h3
-    font-family: "Ikra"
     margin: 0
 
 .mainHead
@@ -240,7 +239,6 @@ figure.effect-sarah:hover a::after
     .mainDescr
       display: block
       p
-        font-family: "Anonymous Pro"
         color: $mainSlog
         font-size: 1.5rem
         &:nth-child(1)
@@ -252,19 +250,19 @@ figure.effect-sarah:hover a::after
     .sendRequest
       margin-top: 30px
       +animation-delay(2.5s)
-      a
-        font-family: "Anonymous Pro"
 
 .btn_clr
   background: $mainLogoColor
+  border-radius:  8px
 .btn_clr2
   background: $fontColor
 
 $imgH: 150px
 
-.about, .portfolio, .watchword
+.about, .watchword
   position: relative
   width: 100%
+  min-height: 800px
 
 .about
   p
@@ -272,116 +270,24 @@ $imgH: 150px
     display: inline-block
     text-align: justify
     margin: 20px auto
-    padding: 5px 20px 10px
-  .abImg1, .abImg2, .abImg3
+    padding: 5px 5px 10px
+  .abImg1, .abImg2, .abImg3, .abImg4
+    border-bottom:  2px solid $fontColor
     display: block
     position: relative
-    width: 357px
-    height: 357px
-    background: #b3e5fc
-    border-radius: 15px
-  .abImg1
-    background: url("../img/user.jpg") no-repeat
-  .abImg2
-    background: url("../img/corp.jpg") no-repeat
-  .abImg3
-    background: url("../img/site.jpg") no-repeat
+    //background-color: rgba(0,0,0,.01)
+    .fa
+      margin: 0 auto
+      display: block
+      text-align: center
 
 .contacts
   .left
     border-right: 1px solid $menu
 
-.portfolio
-  margin-bottom: 50px
-  .container
-    width: 1200px
-    margin: 0 auto
-    padding-left: 0
-    padding-right: 0
-    .row
-      width: 1200px
-      margin: 0 0 0
-      .col.s4
-        padding: 0 0 0
-
-.pfItem
-  width: 100%
-  height: 300px
-  margin: 0
-  border: none
-  overflow: hidden
-  position: relative
-  text-align: center
-  cursor: nw-resize
-  .mask
-    width: 100%
-    height: 300px
-    position: absolute
-    overflow: hidden
-    top: 0
-    left: 0
-  img
-    display: block
-    position: relative
-  h2
-    text-transform: uppercase
-    color: #fff
-    text-align: center
-    position: relative
-    font-size: 17px
-    padding: 10px
-    background: rgba(0, 0, 0, 0.8)
-    margin: 20px 0 0 0
-  p
-    font-family: Georgia, serif
-    font-style: italic
-    font-size: 12px
-    position: relative
-    color: #fff
-    padding: 10px 20px 20px
-    text-align: center
-  a.info
-    display: inline-block
-    text-decoration: none
-    padding: 7px 14px
-    background: #000
-    color: #fff
-    text-transform: uppercase
-    box-shadow: 0 0 1px #000
-    &:hover
-      box-shadow: 0 0 5px #000
-
-.view-first
-  img
-    transition: all 0.2s linear
-  &:hover img
-    transform: scale(1.08)
-  .mask, h2, p, a.info
-    opacity: 0
-  &:hover h2, &:hover p, &:hover a.info
-    opacity: 1
-    transform: translateY(0px)
-  .mask
-    background-color: rgba(202,97,64, 0.7)
-    transition: all 0.4s ease-in-out
-    &:hover
-      opacity: 1
-  h2
-    transform: translateY(-100px)
-    transition: all 0.2s ease-in-out
-  p
-    transform: translateY(100px)
-    transition: all 0.2s linear
-    &:hover
-      transition-delay: 0.1s
-  a.info
-    transition: all 0.2s ease-in-out
-    &:hover
-      transition-delay: 0.2s
-
-.watchword, .contacts
+.contacts
   background: $watchBG
-  min-height: 480px
+  min-height: 800px
   height: 680px
   .cites
     display: block
@@ -405,6 +311,22 @@ $imgH: 150px
       border-bottom: 1px solid $htmlColor
       box-shadow: 0 1px 0 0 $htmlColor
 
+.cabinet
+  //display: none
+  min-height: 800px
+  .leftButton, .avatar, .rightButton
+    display: block
+    position: relative
+  .leftButton, .rightButton, .setReq
+    button
+      margin: 10px 5px 30px
+      width: 100%
+  .avatar
+    img
+      height: 200px
+      width: 180px
+    button
+      margin: 2px 4px 1px
 
 footer
   background: $loaderBG
