добавил css из верстки

--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -209,6 +209,17 @@ figure.effect-sarah:hover a::after
   -webkit-transform: translate3d(0,0,0)
   transform: translate3d(0,0,0)
 
+.logonForm
+  position: absolute
+  width: 100%
+  display:none
+  z-index: 9999
+  +animation-delay(2.5s)
+  .form
+    height: 360px
+    border-radius: 10px
+    background: $menu
+
 .titleWrapper
   display: block
   top: 0
