--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,18 @@ figure.effect-sarah:hover a::after {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
 
+.logonForm {
+  position: absolute;
+  width: 100%;
+  z-index: 9999;
+  -webkit-animation-delay: 2.5s;
+  -moz-animation-delay: 2.5s;
+  animation-delay: 2.5s; }
+  .logonForm .form {
+    height: 360px;
+    border-radius: 10px;
+    background: #265D6B; }
+
 .titleWrapper {
   display: block;
   top: 0;
