созданы map контроллер. модель и вьюхи

--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -212,7 +212,7 @@ figure.effect-sarah:hover a::after
 .logonForm
   position: absolute
   width: 100%
-  display:none
+  display: none
   z-index: 9999
   +animation-delay(2.5s)
   .form
@@ -269,6 +269,16 @@ figure.effect-sarah:hover a::after
   background: $fontColor
 
 $imgH: 150px
+
+.mainMap
+  background-color: rgba(0,0,0,.01)  !important
+  position: relative
+  width: 100%
+  min-height: 800px
+  z-index: 100
+  .map
+    width: 100%
+    height: 400px
 
 .about, .watchword
   position: relative
