--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,7 @@ figure.effect-sarah:hover a::after {
 .logonForm {
   position: absolute;
   width: 100%;
+  display: none;
   z-index: 9999;
   -webkit-animation-delay: 2.5s;
   -moz-animation-delay: 2.5s;
@@ -263,6 +264,16 @@ figure.effect-sarah:hover a::after {
 
 .btn_clr2 {
   background: #393E51; }
+
+.mainMap {
+  background-color: rgba(0, 0, 0, 0.01) !important;
+  position: relative;
+  width: 100%;
+  min-height: 800px;
+  z-index: 100; }
+  .mainMap .map {
+    width: 100%;
+    height: 400px; }
 
 .about, .watchword {
   position: relative;
@@ -367,3 +378,5 @@ footer {
       footer .footMenu a:hover {
         text-decoration: underline;
         color: #CA6144; }
+
+/*# sourceMappingURL=main.css.map */
