--- a/css/main.css
+++ b/css/main.css
@@ -267,13 +267,14 @@ figure.effect-sarah:hover a::after {
 
 .mainMap {
   background-color: rgba(0, 0, 0, 0.01) !important;
-  position: relative;
-  width: 100%;
-  min-height: 800px;
+  display: block;
+  width: 650px;
+  min-height: 600px;
   z-index: 100; }
   .mainMap .map {
-    width: 100%;
-    height: 400px; }
+    width: 600px;
+    height: 600px;
+    position: relative; }
 
 .about, .watchword {
   position: relative;
