--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -272,13 +272,14 @@ $imgH: 150px
 
 .mainMap
   background-color: rgba(0,0,0,.01)  !important
-  position: relative
-  width: 100%
-  min-height: 800px
+  display: block
+  width: 650px
+  min-height: 600px
   z-index: 100
   .map
-    width: 100%
-    height: 400px
+    width: 600px
+    height: 600px
+    position: relative
 
 .about, .watchword
   position: relative
