--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -271,15 +271,15 @@ figure.effect-sarah:hover a::after
 $imgH: 150px
 
 .mainMap
-  background-color: rgba(0,0,0,.01)  !important
+  background-color: rgba(100,90,100,.01)  !important
   display: block
-  width: 650px
   min-height: 600px
-  z-index: 100
   .map
-    width: 600px
     height: 600px
-    position: relative
+    position: absolute
+    top: 0
+    bottom: 0
+    width: 100%
 
 .about, .watchword
   position: relative
