--- a/css/main.css
+++ b/css/main.css
@@ -266,15 +266,15 @@ figure.effect-sarah:hover a::after {
   background: #393E51; }
 
 .mainMap {
-  background-color: rgba(0, 0, 0, 0.01) !important;
+  background-color: rgba(100, 90, 100, 0.01) !important;
   display: block;
-  width: 650px;
-  min-height: 600px;
-  z-index: 100; }
+  min-height: 600px; }
   .mainMap .map {
-    width: 600px;
     height: 600px;
-    position: relative; }
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%; }
 
 .about, .watchword {
   position: relative;
