--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -307,11 +307,12 @@ $imgH: 150px
       display: block
       text-align: center
 
-.contacts
+.sendrequest
   .left
     border-right: 1px solid $menu
 
-.contacts
+.sendrequest
+  margin-top: 30px
   background: $watchBG
   min-height: 800px
   height: 680px
@@ -327,7 +328,7 @@ $imgH: 150px
       +animation-delay(1.5s)
       &:first-of-type
         opacity: 1
-.contacts
+.sendrequest
   h5
     text-align: center
   .input-field label
