--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -69,7 +69,7 @@ button, button:focus, .sandwich, .sandwich.active
   width: 60px
   height: 60px
   position: fixed
-  z-index: 100
+  z-index: 500
   border: none
   left: 60px
   top: 20px
@@ -212,6 +212,7 @@ figure.effect-sarah:hover a::after
   transform: translate3d(0,0,0)
 
 .logonForm
+  top: 10px
   position: absolute
   width: 100%
   display: none
@@ -234,13 +235,19 @@ figure.effect-sarah:hover a::after
 .mainHead
   position: relative
   min-height: 480px
+  width: 100%
   .titleWrapper
+    display: block
     position: absolute
     margin-top: 10px
-    padding: 50px
     vertical-align: middle
     z-index: 199
+    width: 100%
     +transition(all 1s ease)
+    .logon
+      &:hover
+        color: red
+        background-color: red
     .logo
       position: relative
       display: block
