--- a/css/sass/vars.sass
+++ b/css/sass/vars.sass
@@ -1,13 +1,13 @@
 $w: 40px
 $h: 4px
 
-$htmlColor: #E9E6C9
-$fontColor: #393E51
-$menu: #265D6B
-$greyBg: #90a4ae
-$mainTextp: #CA6144
-$mainSlog: #ffebee
-$mainLogoColor: #CA6144
-$loaderBG: #566683
-$sandwich: #CA6144
-$watchBG: #CA6144
+$htmlColor: #feda7c //!
+$fontColor: #182c32 //!
+$menu: #7eb7aa //1
+$greyBg: #7eb7aa //!
+$mainTextp: #e26c1a //!
+$mainSlog: #feda7c //!
+$mainLogoColor: #e64313
+$loaderBG: #182c32
+$sandwich: #feda7c
+$watchBG: #feda7c
