--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
   padding: 0; }
 
 html {
-  background: #E9E6C9;
-  color: #393E51; }
+  background: #feda7c;
+  color: #182c32; }
 
 .parallax-container {
   height: 480px; }
@@ -17,7 +17,7 @@ html {
   display: none; }
 
 .loader {
-  background: none repeat scroll 0 0 #566683;
+  background: none repeat scroll 0 0 #182c32;
   bottom: 0;
   height: 100%;
   left: 0;
@@ -27,7 +27,7 @@ html {
   width: 100%;
   z-index: 9999; }
   .loader .loader-inner {
-    background-color: #566683;
+    background-color: #182c32;
     height: 60px;
     width: 60px;
     margin-top: -30px;
@@ -35,6 +35,8 @@ html {
     left: 50%;
     top: 50%;
     position: absolute; }
+    .loader .loader-inner i {
+      color: #feda7c; }
 
 button, button:focus, .sandwich, .sandwich.active {
   background: none; }
@@ -146,7 +148,7 @@ button, button:focus, .sandwich, .sandwich.active {
         -moz-animation-delay: 0.3s;
         animation-delay: 0.3s; }
     .top_mnu ul a {
-      color: #CA6144;
+      color: #e26c1a;
       display: inline-block;
       text-transform: uppercase;
       font-size: 22px;
@@ -157,14 +159,14 @@ button, button:focus, .sandwich, .sandwich.active {
       height: 60px;
       outline: none; }
       .top_mnu ul a:active {
-        color: #CA6144; }
+        color: #e64313; }
       .top_mnu ul a::after {
         position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
         height: 3px;
-        background: #CA6144;
+        background: #e26c1a;
         content: "";
         -webkit-transition: -webkit-transform 0.35s;
         transition: transform 0.35s;
@@ -182,7 +184,7 @@ figure.effect-sarah a::after {
   left: 0;
   width: 100%;
   height: 3px;
-  background: #CA6144;
+  background: #e26c1a;
   content: "";
   -webkit-transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
@@ -202,10 +204,19 @@ figure.effect-sarah:hover a::after {
   -webkit-animation-delay: 2.5s;
   -moz-animation-delay: 2.5s;
   animation-delay: 2.5s; }
-  .logonForm .form {
+  .logonForm i {
+    display: inline-block;
+    position: relative;
+    color: #7eb7aa;
+    margin: 5px; }
+    .logonForm i:hover {
+      color: #feda7c; }
+  .logonForm form {
+    display: block;
     height: 360px;
     border-radius: 10px;
-    background: #265D6B; }
+    background: #182c32;
+    width: 100%; }
 
 .titleWrapper {
   display: block;
@@ -232,9 +243,11 @@ figure.effect-sarah:hover a::after {
     -moz-transition: all 1s ease 0.3s ease-out;
     -ms-transition: all 1s ease 0.3s ease-out;
     -o-transition: all 1s ease 0.3s ease-out; }
-    .mainHead .titleWrapper .logon:hover {
-      color: red;
-      background-color: red; }
+    .mainHead .titleWrapper .enter {
+      color: #feda7c; }
+      .mainHead .titleWrapper .enter .logon:hover {
+        cursor: pointer;
+        border-bottom: 1px solid #feda7c; }
     .mainHead .titleWrapper .logo {
       position: relative;
       display: block;
@@ -245,11 +258,11 @@ figure.effect-sarah:hover a::after {
       -moz-animation-delay: 1.1s;
       animation-delay: 1.1s; }
       .mainHead .titleWrapper .logo svg path {
-        fill: #CA6144; }
+        fill: #e64313; }
     .mainHead .titleWrapper .mainDescr {
       display: block; }
       .mainHead .titleWrapper .mainDescr p {
-        color: #ffebee;
+        color: #feda7c;
         font-size: 1.5rem; }
         .mainHead .titleWrapper .mainDescr p:nth-child(1) {
           -webkit-animation-delay: 1.7s;
@@ -270,11 +283,11 @@ figure.effect-sarah:hover a::after {
       animation-delay: 2.5s; }
 
 .btn_clr {
-  background: #CA6144;
+  background: #e64313;
   border-radius: 8px; }
 
 .btn_clr2 {
-  background: #393E51; }
+  background: #182c32; }
 
 .mainMap {
   background-color: rgba(100, 90, 100, 0.01) !important;
@@ -299,7 +312,7 @@ figure.effect-sarah:hover a::after {
   margin: 20px auto;
   padding: 5px 5px 10px; }
 .about .abImg1, .about .abImg2, .about .abImg3, .about .abImg4 {
-  border-bottom: 2px solid #393E51;
+  border-bottom: 2px solid #182c32;
   display: block;
   position: relative; }
   .about .abImg1 .fa, .about .abImg2 .fa, .about .abImg3 .fa, .about .abImg4 .fa {
@@ -308,11 +321,11 @@ figure.effect-sarah:hover a::after {
     text-align: center; }
 
 .sendrequest .left {
-  border-right: 1px solid #265D6B; }
+  border-right: 1px solid #7eb7aa; }
 
 .sendrequest {
   margin-top: 30px;
-  background: #CA6144;
+  background: #e26c1a;
   min-height: 800px;
   height: 680px; }
   .sendrequest .cites {
@@ -333,10 +346,10 @@ figure.effect-sarah:hover a::after {
 .sendrequest h5 {
   text-align: center; }
 .sendrequest .input-field label {
-  color: #393E51; }
+  color: #182c32; }
 .sendrequest .input-field input[type=text]:focus, .sendrequest input[type=email]:focus, .sendrequest input[type=tel]:focus {
-  border-bottom: 1px solid #E9E6C9;
-  box-shadow: 0 1px 0 0 #E9E6C9; }
+  border-bottom: 1px solid #feda7c;
+  box-shadow: 0 1px 0 0 #feda7c; }
 
 .cabinet {
   min-height: 800px; }
@@ -353,7 +366,7 @@ figure.effect-sarah:hover a::after {
     margin: 2px 4px 1px; }
 
 footer {
-  background: #566683;
+  background: #182c32;
   padding-top: 50px; }
   footer .row {
     margin-bottom: 0; }
@@ -362,7 +375,7 @@ footer {
     padding: 0; }
   footer .copyright {
     text-align: right;
-    color: #E9E6C9; }
+    color: #feda7c; }
   footer .socButtons {
     height: 80px;
     display: block;
@@ -370,9 +383,9 @@ footer {
     footer .socButtons a {
       font-size: 16px;
       padding: 10px 12px 8px;
-      color: #E9E6C9; }
+      color: #feda7c; }
       footer .socButtons a:hover {
-        color: #265D6B; }
+        color: #7eb7aa; }
   footer .footMenu {
     width: 100%; }
     footer .footMenu a {
@@ -384,12 +397,12 @@ footer {
       font-size: 1em;
       text-align: center;
       width: 25%;
-      border-right: 1px solid #E9E6C9;
-      color: #E9E6C9; }
+      border-right: 1px solid #feda7c;
+      color: #feda7c; }
       footer .footMenu a:last-child {
         border: none; }
       footer .footMenu a:hover {
         text-decoration: underline;
-        color: #CA6144; }
+        color: #e26c1a; }
 
 /*# sourceMappingURL=main.css.map */
